--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,17 @@
 {
     "name": "espressobytes/mergeconfigfiles",
-    "description": "",
-    "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0",
-
-        "magento/magento-composer-installer": "*"
-    },
-    "suggest": {
-
-    },
+    "description": "Merge Config Files for Magento 2",
+    "require": {},
     "type": "magento2-module",
-    "version": "0.1.0",
+    "version": "1.0.0",
     "license": [
-
+        "proprietary"
+    ],
+    "authors": [
+        {
+            "name": "Tobias Bungers",
+            "email": "tobias.bungers@gmail.com"
+        }
     ],
     "autoload": {
         "files": [
@@ -21,13 +20,5 @@
         "psr-4": {
             "Espressobytes\\MergeConfigFiles\\": ""
         }
-    },
-    "extra": {
-        "map": [
-            [
-                "*",
-                "Espressobytes/MergeConfigFiles"
-            ]
-        ]
     }
 }
